--- a/DS_intro/5. חילוץ ובחירת פיצ_רים/תרגול/‏‏Feature extraction - recitation.ipynb
+++ b/DS_intro/5. חילוץ ובחירת פיצ_רים/תרגול/‏‏Feature extraction - recitation.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,9 +53,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6914</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2307</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>4441</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>2312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>1825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        article_count\n",
+       "author               \n",
+       "8                6914\n",
+       "14               2696\n",
+       "19               1543\n",
+       "21               2307\n",
+       "26               4441\n",
+       "33               1742\n",
+       "37               2387\n",
+       "39               2266\n",
+       "45               2312\n",
+       "48               1825"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## we have articles of 10 different authors\n",
     "df.groupby('author').agg(article_count=pd.NamedAgg(column=\"text\", aggfunc=\"count\"))"
@@ -99,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,17 +282,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_bow_vectors (21324, 10000)\n",
+      "test_bow_vectors (7109, 10000)\n"
+     ]
+    }
+   ],
    "source": [
     "train_bow_vectors = np.vstack([vectorizer(doc) for doc in train_docs])\n",
-    "test_bow_vectors = np.vstack([vectorizer(doc) for doc in test_docs])"
+    "test_bow_vectors = np.vstack([vectorizer(doc) for doc in test_docs])\n",
+    "\n",
+    "print(\"train_bow_vectors\", train_bow_vectors.shape)\n",
+    "print(\"test_bow_vectors\", test_bow_vectors.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +316,20 @@
     "    return: N1 x N2 dim matrix \"scores\", where scores[i,j] = cosine_similarity(vecs1[i], vecs2[j])\n",
     "    \"\"\"\n",
     "    \n",
-    "    scores = # answer (can check it against \"sklearn.metrics.pairwise.cosine_similarity\")\n",
+    "    norms_vecs1 = np.linalg.norm(vecs1, axis=1)\n",
+    "    norms_vecs2 = np.linalg.norm(vecs2, axis=1)\n",
+    "\n",
+    "    print(\"norms_vecs1\", norms_vecs1.shape)\n",
+    "    print(\"norms_vecs2\", norms_vecs2.shape)\n",
+    "\n",
+    "    vecs1_normalized = (vecs1.T / norms_vecs1).T\n",
+    "    vecs2_normalized = (vecs2.T / norms_vecs2).T\n",
+    "    \n",
+    "    print(\"vecs1_normalized\", vecs1_normalized.shape)\n",
+    "    print(\"vecs2_normalized\", vecs2_normalized.shape)\n",
+    "    \n",
+    "    scores = vecs1_normalized @ vecs2_normalized.T\n",
+    "    print(\"scores\", scores.shape)\n",
     "    \n",
     "    return scores"
    ]
@@ -226,16 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norms_vecs1 (7109,)\n",
+      "norms_vecs2 (21324,)\n",
+      "vecs1_normalized (7109, 10000)\n",
+      "vecs2_normalized (21324, 10000)\n",
+      "scores (7109, 21324)\n"
+     ]
+    }
+   ],
    "source": [
     "scores = pairwise_cosine_similarity(test_bow_vectors, train_bow_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,18 +374,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.899845266563511\n"
+     ]
+    }
+   ],
    "source": [
     "print('accuracy: ', np.mean(predicted_authors == test_authors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confision matrix:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1549,   22,    6,   13,   11,   16,   16,   20,   31,   26],\n",
+       "       [  19,  564,    1,    4,    9,    6,    2,   12,   33,    5],\n",
+       "       [  18,    4,  354,    0,    0,    0,   13,    0,    0,   13],\n",
+       "       [  18,    2,    2,  476,    1,    9,   12,   27,   14,    5],\n",
+       "       [   3,    0,    1,    0, 1103,    0,    1,    0,    0,    0],\n",
+       "       [  12,    2,    1,    3,    1,  401,    3,    9,    8,    9],\n",
+       "       [  32,    3,   14,    8,    3,    5,  497,    3,    7,   15],\n",
+       "       [   8,    1,    0,    9,    0,    0,    1,  570,    9,    3],\n",
+       "       [  25,   12,    5,    5,    8,    8,    9,   12,  496,    6],\n",
+       "       [  16,    6,    2,    3,    2,    2,   14,    5,    8,  387]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print('confision matrix:')\n",
     "confusion_matrix(test_authors, predicted_authors)"
@@ -304,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,14 +481,15 @@
     "    return: idf score for every word in the vocabulary\n",
     "    \"\"\"\n",
     "    \n",
-    "    idf = # answer\n",
+    "    n_w = np.sum(bow_vectors!=0, axis=0)\n",
+    "    idf = np.log(bow_vectors.shape[0]/(n_w+1))\n",
     "    \n",
     "    return idf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,9 +505,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['a', 'to', 'in', 'the', 'and', 'of', 'for', 'it', 'that', 'with',\n",
+       "       'as', 'on', 'at', 'but', 'not', 'be', 'by', 'all', 'was', 's', 'Γ',\n",
+       "       'he', 'from', 'his', 'this', 'have', 'i', 'no', 'so', 'had', 'is',\n",
+       "       'one', 'an', 'which', 'or', 'there', 'were', 'when', 'they', 'if',\n",
+       "       'been', 'him', 'more', 'what', 'would', 'who', 'out', 'than',\n",
+       "       'into', 'them'], dtype='<U16')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vocabulary[np.argsort(idf)[:50]]"
    ]
@@ -354,16 +537,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['definitely', 'mattered', 'annoy', 'victoria', 'tinted', 'draped',\n",
+       "       'risked', 'ordeal', 'photographs', 'tipped', 'balcony', 'scant',\n",
+       "       'cracks', 'arouse', 'overtook', 'cowardice', 'chasing', 'overcoat',\n",
+       "       'galloped', 'xxx', 'overgrown', 'comments', 'spire', 'links',\n",
+       "       'prefers', 'photograph', 'slips', 'leafy', 'confidences',\n",
+       "       'outbreak', 'splendidly', 'selecting', 'tinged', 'typical',\n",
+       "       'propped', 'laboriously', 'distasteful', 'richness', 'hymns',\n",
+       "       'invest', 'greetings', 'permitting', 'gust', 'occupants', 'oval',\n",
+       "       'willow', 'cope', 'illusions', 'shaven', 'gaudy'], dtype='<U16')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vocabulary[np.argsort(idf)[::-1][:50]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,16 +575,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norms_vecs1 (7109,)\n",
+      "norms_vecs2 (21324,)\n",
+      "vecs1_normalized (7109, 10000)\n",
+      "vecs2_normalized (21324, 10000)\n",
+      "scores (7109, 21324)\n"
+     ]
+    }
+   ],
    "source": [
     "scores = pairwise_cosine_similarity(test_tfidf_vectors, train_tfidf_vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,18 +605,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.9518919679279786\n"
+     ]
+    }
+   ],
    "source": [
     "print('accuracy: ', np.mean(predicted_authors == test_authors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "confision matrix:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1663,    4,    7,    1,    7,    7,    4,    7,    6,    4],\n",
+       "       [  19,  611,    0,    0,    8,    2,    2,    3,    3,    7],\n",
+       "       [   2,    0,  381,    4,    0,    0,    5,    1,    1,    8],\n",
+       "       [   6,    0,    6,  530,    0,    6,    2,    9,    7,    0],\n",
+       "       [   0,    0,    0,    0, 1104,    0,    0,    1,    0,    3],\n",
+       "       [   9,   10,    2,    4,    3,  407,    2,    2,    9,    1],\n",
+       "       [   8,    7,    6,    4,    2,    5,  532,    0,   21,    2],\n",
+       "       [   2,    0,    0,    3,    0,    2,    0,  590,    1,    3],\n",
+       "       [  12,    2,    8,    4,    7,    2,    3,    5,  542,    1],\n",
+       "       [   9,    0,    8,    1,    1,    3,    8,    4,    4,  407]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print('confision matrix:')\n",
     "confusion_matrix(test_authors, predicted_authors)"
@@ -426,10 +676,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norms_vecs1 (7109,)\n",
+      "norms_vecs2 (10,)\n",
+      "vecs1_normalized (7109, 10000)\n",
+      "vecs2_normalized (10, 10000)\n",
+      "scores (7109, 10)\n",
+      "accuracy:  0.8641159094106062\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1491,   39,    3,   24,   17,   27,   42,    6,   42,   19],\n",
+       "       [  39,  507,    2,    2,   13,   17,   15,    1,   22,   37],\n",
+       "       [   2,    0,  276,   16,    0,    0,   97,    0,    4,    7],\n",
+       "       [   6,    3,   14,  464,    0,   20,   40,    9,    5,    5],\n",
+       "       [   0,   11,    0,    0, 1082,    0,    2,    0,    4,    9],\n",
+       "       [   5,    0,    4,    1,    1,  423,    7,    5,    1,    2],\n",
+       "       [   2,    0,   39,    4,    0,    9,  516,    3,   10,    4],\n",
+       "       [  20,    2,    1,   15,    2,    6,    2,  537,   16,    0],\n",
+       "       [   7,   13,    0,    0,    1,    9,   55,    9,  492,    0],\n",
+       "       [  13,    2,    5,    2,    1,    6,   37,    0,   24,  355]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_authors = np.unique(train_authors)\n",
+    "N = train_tfidf_vectors.shape[0]\n",
+    "count_test = 0\n",
+    "list_tfidf_autors = []\n",
+    "\n",
+    "for author in list_authors:\n",
+    "    tfidf_author = train_tfidf_vectors[train_authors==author]\n",
+    "    count_test += tfidf_author.shape[0]\n",
+    "    \n",
+    "    mean_tfidf_author = np.mean(tfidf_author, axis=0)\n",
+    "    list_tfidf_autors.append(mean_tfidf_author)\n",
+    "\n",
+    "all_mean_tfidf_author = np.stack(list_tfidf_autors)\n",
+    "assert count_test == N\n",
+    "\n",
+    "scores = pairwise_cosine_similarity(test_tfidf_vectors, all_mean_tfidf_author)\n",
+    "predicted_authors = list_authors[scores.argmax(axis=1)]\n",
+    "\n",
+    "print('accuracy: ', np.mean(predicted_authors == test_authors))\n",
+    "confusion_matrix(test_authors, predicted_authors)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,6 +741,75 @@
    "source": [
     "```Now do the same, but instead of the one \"mean\" vector for each author, find 3 vectors for each author as the cluster centers of KMeans(k=3) on his train tf-idf vectors. (try low n_init to reduce run time)\n",
     "Is it more helpful?```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all_mean_tfidf_author (30, 10000)\n",
+      "norms_vecs1 (7109,)\n",
+      "norms_vecs2 (30,)\n",
+      "vecs1_normalized (7109, 10000)\n",
+      "vecs2_normalized (30, 10000)\n",
+      "scores (7109, 30)\n",
+      "accuracy:  0.8991419327612885\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1513,   52,   15,   12,   39,   12,   19,    4,   17,   27],\n",
+       "       [  20,  594,    1,    3,    2,   12,   14,    1,    8,    0],\n",
+       "       [   1,    0,  325,    0,    0,    0,   55,    0,    7,   14],\n",
+       "       [   9,    6,   31,  459,    0,   12,   21,   14,    9,    5],\n",
+       "       [   4,    1,    0,    0, 1077,    0,    0,    0,    2,   24],\n",
+       "       [   4,    0,    3,    2,    0,  422,    8,    4,    4,    2],\n",
+       "       [   3,    1,   21,    4,    0,   11,  499,    1,   39,    8],\n",
+       "       [  10,    4,    0,   12,    0,    5,    2,  560,    8,    0],\n",
+       "       [   4,    2,    0,    1,    9,    7,    8,    2,  549,    4],\n",
+       "       [  12,    3,   11,    0,    1,    2,   12,    0,   10,  394]],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "list_authors = np.unique(train_authors)\n",
+    "K = 3\n",
+    "N = train_tfidf_vectors.shape[0]\n",
+    "count_test = 0\n",
+    "list_tfidf_autors = []\n",
+    "\n",
+    "for author in list_authors:\n",
+    "    tfidf_author = train_tfidf_vectors[train_authors==author]\n",
+    "    count_test += tfidf_author.shape[0]\n",
+    "    \n",
+    "    kmeans = KMeans(n_clusters=K, n_init=3).fit(tfidf_author)\n",
+    "    clusters = kmeans.cluster_centers_\n",
+    "    list_tfidf_autors += list(clusters)\n",
+    "\n",
+    "all_mean_tfidf_author = np.stack(list_tfidf_autors)\n",
+    "list_authors = np.repeat(list_authors, K)\n",
+    "assert count_test == N\n",
+    "\n",
+    "print(\"all_mean_tfidf_author\", all_mean_tfidf_author.shape)\n",
+    "\n",
+    "scores = pairwise_cosine_similarity(test_tfidf_vectors, all_mean_tfidf_author)\n",
+    "predicted_authors = list_authors[scores.argmax(axis=1)]\n",
+    "\n",
+    "print('accuracy: ', np.mean(predicted_authors == test_authors))\n",
+    "confusion_matrix(test_authors, predicted_authors)"
    ]
   },
   {
@@ -463,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
