--- a/DS_intro/5. חילוץ ובחירת פיצ_רים/תרגיל - (תרגיל חילוץ פיצרים מ-מודולים)/feature extraction exercise.ipynb
+++ b/DS_intro/5. חילוץ ובחירת פיצ_רים/תרגיל - (תרגיל חילוץ פיצרים מ-מודולים)/feature extraction exercise.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# can be found in: # can be found in: https://drive.google.com/open?id=1G6rXwTw0bOBbkSaw96bW76BFnxM1x7H5\n",
     "data = pd.read_csv('resources/data/train.csv')\n",
-    "data.head()\n",
     "data = data.iloc[:2000]\n",
     "data = data[data.apply(lambda x: not (type(x['question1']) == float or type(x['question2']) == float), axis = 1)]"
    ]
@@ -79,10 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "questions (4000, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "q1_dataset = data[['id', 'qid1', 'question1']].rename(columns={'qid1': \"qid\", \"question1\": \"question\"}, inplace=False)\n",
+    "q2_dataset = data[['id', 'qid2', 'question2']].rename(columns={'qid2': \"qid\", \"question2\": \"question\"}, inplace=False)\n",
+    "\n",
+    "questions = pd.concat([q1_dataset, q2_dataset])\n",
+    "questions = questions.drop_duplicates(keep=\"first\")\n",
+    "\n",
+    "print(\"questions\", questions.shape)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,10 +108,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>qid</th>\n",
+       "      <th>question</th>\n",
+       "      <th>question_step</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>What is the step by step guide to invest in sh...</td>\n",
+       "      <td>[what, is, the, step, by, step, guide, to, inv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>What is the story of Kohinoor (Koh-i-Noor) Dia...</td>\n",
+       "      <td>[what, is, the, story, of, kohinoor, (, koh-i-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>How can I increase the speed of my internet co...</td>\n",
+       "      <td>[how, can, i, increase, the, speed, of, my, in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Why am I mentally very lonely? How can I solve...</td>\n",
+       "      <td>[why, am, i, mentally, very, lonely, ?, how, c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Which one dissolve in water quikly sugar, salt...</td>\n",
+       "      <td>[which, one, dissolve, in, water, quikly, suga...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  qid                                           question  \\\n",
+       "0   0    1  What is the step by step guide to invest in sh...   \n",
+       "1   1    3  What is the story of Kohinoor (Koh-i-Noor) Dia...   \n",
+       "2   2    5  How can I increase the speed of my internet co...   \n",
+       "3   3    7  Why am I mentally very lonely? How can I solve...   \n",
+       "4   4    9  Which one dissolve in water quikly sugar, salt...   \n",
+       "\n",
+       "                                       question_step  \n",
+       "0  [what, is, the, step, by, step, guide, to, inv...  \n",
+       "1  [what, is, the, story, of, kohinoor, (, koh-i-...  \n",
+       "2  [how, can, i, increase, the, speed, of, my, in...  \n",
+       "3  [why, am, i, mentally, very, lonely, ?, how, c...  \n",
+       "4  [which, one, dissolve, in, water, quikly, suga...  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "questions['question_step'] = questions['question'].apply(lambda x: twt_tokenizer.tokenize(x.lower()))\n",
+    "\n",
+    "questions.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,10 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question_features_for_future_use = []"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def save_feature(df, column_name):\n",
+    "    df_to_save = df[['qid', column_name]]\n",
+    "    df_to_save.to_csv('resources/features/' + column_name + '.csv', index = False)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -146,10 +259,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\RONENAH\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('averaged_perceptron_tagger')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4000,)\n",
+      "(4000, 5)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-e766176a499a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquestion_specific\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquestions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquestion_specific\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m# questions['number_count'] = questions['question'].apply(lambda x: len(re.findall('(\\d+)', x)))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m# questions['number_of_words'] = questions['question_step'].apply(len)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "# questions['pos_tag_count'] = questions['question_step'].apply(lambda x_1: Counter(map(lambda x_2: x_2[1], pos_tag(tuple(x_1)))))\n",
+    "\n",
+    "\n",
+    "questions['number_count'] = questions['question'].apply(lambda x: sum(c.isdigit() for c in s))\n",
+    "# questions['number_of_words'] = questions['question_step'].apply(len)\n",
+    "# questions['length_of_longest_word'] = questions['question_step'].apply(lambda x: max(map(len, x)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -403,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
