Finish DS_intro

--- a/DS_intro/8. זיהוי אנומליות/תרגיל/Anomaly_detection_exercise.ipynb
+++ b/DS_intro/8. זיהוי אנומליות/תרגיל/Anomaly_detection_exercise.ipynb
@@ -23,8 +23,7 @@
       "name": "Anomaly detection exercise.ipynb",
       "provenance": [],
       "collapsed_sections": []
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -53,7 +52,7 @@
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,25 +83,25 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 38
+          "height": 72
         },
         "id": "MDZXcKahwXgL",
-        "outputId": "78da7732-6de5-4304-d783-5009d8ef857c"
+        "outputId": "3ab1b274-26a7-497f-8f1c-d072cca22cc1"
       },
       "source": [
         "from google.colab import files\r\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-622361fe-fb87-434b-86df-38124150c8ad\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-12246b88-a5f4-4e16-8a9f-64540918e5de\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-622361fe-fb87-434b-86df-38124150c8ad\">\n",
+              "     <output id=\"result-12246b88-a5f4-4e16-8a9f-64540918e5de\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -115,6 +114,13 @@
           "metadata": {
             "tags": []
           }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Saving creditcard.csv to creditcard.csv\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -127,13 +133,13 @@
           "height": 224
         },
         "id": "N70zwrL9wGCN",
-        "outputId": "177d280d-023d-43a8-bdb1-df93465a14a5"
+        "outputId": "c447e254-3f23-49e6-c786-dc978f5e542d"
       },
       "source": [
         "df = pd.read_csv('creditcard.csv') ## can be found in: https://drive.google.com/open?id=1wyz2czVFaQWdqRmLAtT5MwCOSlnZ6od9\n",
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +373,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -379,7 +385,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-diS-QIwGCN",
-        "outputId": "0650e441-2b75-4fb5-9708-f147412481e5"
+        "outputId": "cffc3b9f-45f6-4a95-e244-8d222ec6d1ed"
       },
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\r\n",
@@ -393,7 +399,7 @@
         "print(\"data\", data.shape)\r\n",
         "print(\"label\", label.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,11 +432,12 @@
         "def evaluate_method(y_true, grades):\n",
         "    # y_true is the class: 0 for regular, 1 for anomaly\n",
         "    # the grades should indicate how anomalous you think the sample is - as higher the grade, the sample is more suspiciuos\n",
-        "    return roc_auc_score(y_true, grades)\n",
+        "    indices_higher_grades = np.argsort(grades)[:-1000]\n",
+        "    return roc_auc_score(y_true[indices_higher_grades], grades[indices_higher_grades])\n",
         "\n",
         "all_grades = np.zeros(shape=(data.shape[0], 4))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -452,7 +459,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yXSFl-powGCO",
-        "outputId": "4058aa94-a411-4bc8-dfb2-52425416494f"
+        "outputId": "cc60b429-3480-4502-dc3e-bd9745da9aee"
       },
       "source": [
         "data_mean = data.mean(axis=0)\r\n",
@@ -462,12 +469,12 @@
         "all_grades[:, 0] = distances\r\n",
         "print(evaluate_method(label, distances))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.9514843335479414\n"
+            "0.9228197343854639\n"
           ],
           "name": "stdout"
         }
@@ -490,7 +497,7 @@
           "height": 52
         },
         "id": "gjF3BzplwGCP",
-        "outputId": "ca6b9b21-f758-44c0-bd3b-1d45dfc63f8e"
+        "outputId": "7edf4068-ab06-466a-8d19-31818fa02217"
       },
       "source": [
         "\"\"\"\r\n",
@@ -498,7 +505,7 @@
         "The hidden assumption is that the majority of the samples are not anomalies, and then then 'mean sample' would represent in a good way the normal credit card transactions.\r\n",
         "\"\"\""
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +520,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 77
         }
       ]
     },
@@ -534,7 +541,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "05n-hKXLwGCP",
-        "outputId": "bf6f09ca-ffa8-4a54-91dc-7641933e2eee"
+        "outputId": "af019722-1b82-4636-fdae-6f6edf3dd525"
       },
       "source": [
         "from sklearn.decomposition import PCA\r\n",
@@ -548,12 +555,12 @@
         "all_grades[:, 1] = distances_PCA\r\n",
         "print(evaluate_method(label, distances_PCA))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.9431980145118442\n"
+            "0.9159451148290565\n"
           ],
           "name": "stdout"
         }
@@ -577,7 +584,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZAu79fa9wGCQ",
-        "outputId": "aae69277-b4ba-4f4c-a52b-d36085386754"
+        "outputId": "61a99dfb-2f38-4baa-dd52-c0758e971c56"
       },
       "source": [
         "from sklearn.svm import OneClassSVM\r\n",
@@ -587,7 +594,7 @@
         "\r\n",
         "decisions = svm_model.decision_function(data)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +612,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CbzahyusGrlI",
-        "outputId": "f09e7363-044d-4326-f731-6a3f327a51d7"
+        "outputId": "44abff43-f763-40f7-895d-8e53c8c6a1b7"
       },
       "source": [
         "decisions = -decisions\r\n",
@@ -614,12 +621,12 @@
         "all_grades[:, 2] = decisions\r\n",
         "print(evaluate_method(label, decisions))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.9450056575860768\n"
+            "0.8657004587518036\n"
           ],
           "name": "stdout"
         }
@@ -641,7 +648,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KijZh39rG8Fe",
-        "outputId": "8abcb8e4-87ab-474a-8133-8e355d876a95"
+        "outputId": "e13db4dc-591e-4a1d-8a1a-f4d7721fb873"
       },
       "source": [
         "from sklearn.cluster import KMeans\r\n",
@@ -667,47 +674,47 @@
         "clustering(nb_cluster=10)\r\n",
         "clustering(nb_cluster=20)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 284807/284807 [00:06<00:00, 44095.04it/s]\n"
+            "100%|██████████| 284807/284807 [00:06<00:00, 43545.72it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "for  2 clusters, roc= 0.9483303472659791\n"
+            "for  2 clusters, roc= 0.8726944576139956\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 284807/284807 [00:06<00:00, 42388.57it/s]\n"
+            "100%|██████████| 284807/284807 [00:07<00:00, 37421.46it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "for  10 clusters, roc= 0.9505114417779775\n"
+            "for  10 clusters, roc= 0.9182799531361588\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 284807/284807 [00:04<00:00, 64930.82it/s]\n"
+            "100%|██████████| 284807/284807 [00:04<00:00, 66904.29it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "for  20 clusters, roc= 0.9497869361948108\n"
+            "for  20 clusters, roc= 0.9168329281468247\n"
           ],
           "name": "stdout"
         }
@@ -731,7 +738,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DZa3xVNJwGCR",
-        "outputId": "b4217e8f-0005-4c97-d379-93d008364d2e"
+        "outputId": "ef1ce19f-3244-4696-811b-3b324e4712f3"
       },
       "source": [
         "from sklearn.mixture import GaussianMixture\r\n",
@@ -748,19 +755,19 @@
         "\r\n",
         "print(evaluate_method(label, final_grade))"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 284807/284807 [00:06<00:00, 44878.18it/s]\n"
+            "100%|██████████| 284807/284807 [00:06<00:00, 42036.95it/s]\n"
           ],
           "name": "stderr"
         },
         {
           "output_type": "stream",
           "text": [
-            "0.925013443379602\n"
+            "0.8594277689633578\n"
           ],
           "name": "stdout"
         }
@@ -783,10 +790,14 @@
         "id": "1GDhbD7vwGCR"
       },
       "source": [
+        "import tensorflow as tf\n",
+        "from keras import backend as K\n",
         "from keras.layers import Dense, Input\n",
-        "from keras.models import Model"
+        "from keras.models import Model, Sequential\n",
+        "from keras.activations import exponential\n",
+        "from keras.initializers import RandomNormal"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -796,10 +807,143 @@
         "id": "I0bMvb9PwGCR"
       },
       "source": [
-        ""
+        "class VAE(tf.keras.Model):\r\n",
+        "\r\n",
+        "    def __init__(self, input_size):\r\n",
+        "        super(VAE, self).__init__()\r\n",
+        "\r\n",
+        "        self.encoder = Sequential()\r\n",
+        "        self.encoder.add(Input((input_size)))\r\n",
+        "        self.encoder.add(Dense((input_size*0.8), activation='tanh'))\r\n",
+        "        self.encoder.add(Dense((input_size*0.6), activation='tanh'))\r\n",
+        "        self.encoder.add(Dense((input_size*0.4), activation='tanh'))\r\n",
+        "        self.encoder.add(Dense((input_size*0.2), activation='tanh'))\r\n",
+        "\r\n",
+        "        self.decoder = Sequential()\r\n",
+        "        self.decoder.add(Dense((input_size*0.2), activation='tanh'))\r\n",
+        "        self.decoder.add(Dense((input_size*0.4), activation='tanh'))\r\n",
+        "        self.decoder.add(Dense((input_size*0.6), activation='tanh'))\r\n",
+        "        self.decoder.add(Dense((input_size*0.8), activation='tanh'))\r\n",
+        "        self.decoder.add(Dense((input_size), activation='sigmoid'))\r\n",
+        "\r\n",
+        "    def call(self, inputs):\r\n",
+        "      h = self.encoder(inputs)\r\n",
+        "      inputs_recon = self.decoder(h)\r\n",
+        "      return inputs_recon"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sDdHpfHiO5kQ",
+        "outputId": "1cc87731-c167-4f97-f151-2175ae222750"
+      },
+      "source": [
+        "model = VAE(input_size=28)\r\n",
+        "model.compile(optimizer='rmsprop', loss =\"mse\")\r\n",
+        "\r\n",
+        "label = df['Class']\r\n",
+        "\r\n",
+        "data = df.drop(columns=[\"Class\"])\r\n",
+        "model.fit(data, data, batch_size=500, epochs=20, verbose=2)\r\n",
+        "\r\n",
+        "model.summary()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/20\n",
+            "570/570 - 2s - loss: 1.0369\n",
+            "Epoch 2/20\n",
+            "570/570 - 2s - loss: 0.9553\n",
+            "Epoch 3/20\n",
+            "570/570 - 2s - loss: 0.9405\n",
+            "Epoch 4/20\n",
+            "570/570 - 2s - loss: 0.9340\n",
+            "Epoch 5/20\n",
+            "570/570 - 2s - loss: 0.9300\n",
+            "Epoch 6/20\n",
+            "570/570 - 2s - loss: 0.9244\n",
+            "Epoch 7/20\n",
+            "570/570 - 2s - loss: 0.9202\n",
+            "Epoch 8/20\n",
+            "570/570 - 2s - loss: 0.9171\n",
+            "Epoch 9/20\n",
+            "570/570 - 2s - loss: 0.9132\n",
+            "Epoch 10/20\n",
+            "570/570 - 2s - loss: 0.9090\n",
+            "Epoch 11/20\n",
+            "570/570 - 2s - loss: 0.9055\n",
+            "Epoch 12/20\n",
+            "570/570 - 2s - loss: 0.9030\n",
+            "Epoch 13/20\n",
+            "570/570 - 2s - loss: 0.9007\n",
+            "Epoch 14/20\n",
+            "570/570 - 2s - loss: 0.8987\n",
+            "Epoch 15/20\n",
+            "570/570 - 2s - loss: 0.8967\n",
+            "Epoch 16/20\n",
+            "570/570 - 2s - loss: 0.8945\n",
+            "Epoch 17/20\n",
+            "570/570 - 2s - loss: 0.8922\n",
+            "Epoch 18/20\n",
+            "570/570 - 2s - loss: 0.8903\n",
+            "Epoch 19/20\n",
+            "570/570 - 2s - loss: 0.8889\n",
+            "Epoch 20/20\n",
+            "570/570 - 2s - loss: 0.8876\n",
+            "Model: \"vae_23\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "sequential_7 (Sequential)    (None, 5)                 1253      \n",
+            "_________________________________________________________________\n",
+            "sequential_8 (Sequential)    (None, 28)                1306      \n",
+            "=================================================================\n",
+            "Total params: 2,559\n",
+            "Trainable params: 2,559\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2C-MeJRBPYcp",
+        "outputId": "7648d14e-735f-4f02-b53e-5220be92a8bc"
+      },
+      "source": [
+        "VAE_grades = np.linalg.norm(model.predict(data, batch_size=500)-data, axis = 1)\r\n",
+        "evaluate_method(label, VAE_grades)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9241341865651618"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -823,12 +967,53 @@
       "cell_type": "code",
       "metadata": {
         "collapsed": true,
-        "id": "7Vn0qHEcwGCS"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Vn0qHEcwGCS",
+        "outputId": "ded55e4d-d18d-45ce-a285-2d56d7a6715d"
+      },
+      "source": [
+        "from sklearn.cluster import SpectralClustering\r\n",
+        "\r\n",
+        "def spectral_clustering(nb_cluster):\r\n",
+        "  kmeans_model = SpectralClustering(nb_cluster, n_jobs = 3)\r\n",
+        "  kmeans_model.fit(data[:10000])\r\n",
+        "\r\n",
+        "  affinity_matrix = kmeans_model.affinity_matrix_\r\n",
+        "\r\n",
+        "  grades = 1 / np.linalg.norm(affinity_matrix, axis=0)\r\n",
+        "  print(\"for \", nb_cluster, \"clusters, roc=\", evaluate_method(label, grades))\r\n",
+        "\r\n",
+        "spectral_clustering(nb_cluster=2)\r\n",
+        "spectral_clustering(nb_cluster=10)\r\n",
+        "spectral_clustering(nb_cluster=20)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.01109431 0.0107819  0.01162391 ... 0.01093071 0.01085852 0.01121639]\n",
+            "for  2 clusters, roc= 0.8978775419491054\n",
+            "[0.01109431 0.0107819  0.01162391 ... 0.01093071 0.01085852 0.01121639]\n",
+            "for  10 clusters, roc= 0.8978775419491054\n",
+            "[0.01109431 0.0107819  0.01162391 ... 0.01093071 0.01085852 0.01121639]\n",
+            "for  20 clusters, roc= 0.8978775419491054\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6P_FUeXyDV2o"
       },
       "source": [
         ""
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
