Update part 1 of modulim

--- a/DS_intro/4. SVM _ עצי החלטה/תרגול/svm - recitation.ipynb
+++ b/DS_intro/4. SVM _ עצי החלטה/תרגול/svm - recitation.ipynb
@@ -587,7 +587,7 @@
     "\n",
     "## plot the line where te y switch from +1 to -1\n",
     "plot_data(X, Y, 'X', 'Y', 'positive', 'negative', 0, 4.2, 0, 5)\n",
-    "plt.contour(x_1, x_2, Z, [0.5], colors='b', label=\"no regularization\")\n",
+    "plt.contour(x_1, x_2, Z, [0.5], colors='r', label=\"no regularization\")\n",
     "plt.contour(x_1, x_2, Z_r, [0.5], colors='b', label=\"regularization\")\n",
     "\n",
     "plt.legend()"
